# lg_edge_midend_backup

./: .env  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  download_arcface.py  main.py  requirements.txt  setup.sh
ai/: .gitignore  inference.py  main.py  mqtt.py  pyproject.toml  utils.py
app/: config.py  handlers.py  logging_setup.py  main.py  models.py  routes.py  state.py  utils.py
app/ai/: ai_config.py  inference.py  main.py  temp.py  tracker.py
app/ai/detectors/: __init__.py  base.py  effdetlite.py  mobilenet_ssd.py  rtdetr.py  yolo11n.py  yolov11n.py  yolov5n.py  yolov8n.py
app/ai/faces/: __init__.py  af_embedder.py  base.py  detector.py  embedder.py  mp_detector.py  register_face.py  register_face_dir.py  simple_matcher.py  test.py  test_embed.py  test_recognize.py  utils.py
app/ai/faces/database/: embeddings.json
app/ai/trackers/: __init__.py  base.py  botsort.py  bytetrack.py  deepsort.py
app/dedup/: dedup.py  face_dedup.py  main.py  suppression.py  utils.py
app/mqtt/: publisher.py  worker.py
benchmark/: benchmark.py
mosquitto/: mosquitto.conf
