[project]
name = "high-end-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.217",
]

[tool.uv.sources]
torch = [{ index = "pytorch-gpu" }]
torchvision = [{ index = "pytorch-gpu" }]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
